# gspm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: geode-design.md  gspm-design.md  source-formats.md
samples/grease/: gemstone.toml
samples/grease/src/: grease-demo-37.gs  grease-demo.gs
samples/grease/tests/: grease-demo-tests.gs
samples/magritte-app/: gemstone.toml
samples/magritte-app/src/: contact-descriptions.gs  contact-model.gs  contact-persistence-36.gs  contact-persistence-37.gs
samples/magritte-app/tests/: contact-tests.gs
samples/minimal/: gemstone.toml
samples/minimal/src/: counter.gs
samples/minimal/tests/: counter-tests.gs
samples/rowan-tool/: gemstone.toml
samples/rowan-tool/src/: rowan-tool.gs
samples/rowan-tool/tests/: rowan-tool-tests.gs
samples/seaside/: gemstone.toml
samples/seaside/src/: seaside-hello.gs
samples/seaside/tests/: seaside-hello-tests.gs
samples/tonel-project/: gemstone.toml
samples/tonel-project/tests/: todo-tests.gs
samples/zinc/: gemstone.toml
samples/zinc/src/: zinc-client.gs
samples/zinc/tests/: zinc-client-tests.gs
src/geode/: __init__.py  __main__.py  cache.py  cli.py  config.py  errors.py  filetree.py  git.py  lockfile.py  manifest.py  mcz.py  models.py  registry.py  resolver.py  tonel.py  topaz.py
src/gspm/: __init__.py  __main__.py  cache.py  cli.py  config.py  errors.py  filetree.py  git.py  lockfile.py  manifest.py  mcz.py  models.py  registry.py  resolver.py  tonel.py  topaz.py
tests/: conftest.py  test_cli.py  test_filetree.py  test_lockfile.py  test_manifest.py  test_mcz.py  test_resolver.py  test_tonel.py  test_topaz.py
tests/fixtures/: sample_gemstone.toml
(+13 files in other folders)
